--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <title>Student Bio</title>
 </header>
 <body>
-    <h1>Sarina Burch</h1>
+    <h1>Student Bio</h1>
+    <h2>Sarina Burch</h2>
     <img width="200px" height="200px" src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-9/107568269_10157796324724372_307844485093594380_o.jpg?_nc_cat=108&_nc_sid=85a577&_nc_ohc=gck_3jwvna0AX8TTY9G&_nc_ht=scontent-atl3-1.xx&oh=35f75af35b83f95819d178a6a3b87805&oe=5F3C0E5F">
     <p>Hello World!</p>
     <p>My name is Sarina. I am 26 years old and was born and raised in Wisconsin. I moved to Charlotte last August with my spouse, Lance, and our two dogs, Archie and Gambit. We currently reside in NoDa.</p>
     <p>Before coming to Bootcamp, I was working in Digital Marketing. In that field I was able to learn basic HTML and CSS, and it really ignited my passion for programming and web develeopment.</p>
-    <h1>Contact Info</h1>
+    <h2>Contact Info</h2>
     <ul>
         <li><strong>Email: </strong><a href= "mailto:sarinaburch52@gmail.com">sarinaburch52@gmail.com</a></li>
         <li><strong>GitHub: </strong><a href="https://github.com/sarinaburch/Student-Bio">Student Bio</a></li>
