--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<header>
+<head>
     <title>Student Bio</title>
-</header>
+</head>
 <body>
     <h1>Student Bio</h1>
     <h2>Sarina Burch</h2>
